fix spacing between content and footer

--- a/application/static/css/styles.css
+++ b/application/static/css/styles.css
@@ -1,4 +1,14 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 60px;
+}
+
 #footer{
+  margin-block-start: 5px;
   height:50px;
   padding:2px;
   border-top:1px solid #ABABAB;
